# virtual_nonholonomic_constraints

./: .gitignore  README.md
1.SUBMISSION/: abstract.tex  acknowledgements.tex  acrobot.tex  main.tex  symbols.tex  title.tex
1.SUBMISSION/REVIEWS/: Review17351(Reviewer4)Of22-0089v2.txt
1.SUBMISSION/images/: acrobot_ecm.tex  acrobot_omega.tex  gc_barbell.tex  mu_intersection.tex  newtonian_barbell.tex  qa_arctan.tex  rho_intersection.tex  vlp_T_controller.tex  vlp_energy_in_out.tex  vlp_optimal_controller_qp_plane.tex
1.SUBMISSION/images/sty/: adantikz.sty
1.SUBMISSION/paper/: main.tex
1.SUBMISSION/paper/REVIEWS/: ReportOn22-0089v2.txt
2.REVISION/: bib.bib  main.tex
2.REVISION/FIGURES/: acrobot_EleqR.tex
2.REVISION/REPLY_REVIEWERS/: reply_reviewers.tex
2.REVISION/REVIEWS/: Review17347(Reviewer2)Of22-0089v2.txt
3.FINAL_VERSION/: bib.bib  generic.sty  main.tex
3.FINAL_VERSION/BIOS/: maggiore.tex  moran-macdonald.tex  wang.tex
3.FINAL_VERSION/FIGURES/: acrobot_ER1R2.tex
3.FINAL_VERSION/REVIEWS/: ReportOn22-0089v3.txt  Review21547(Reviewer6)Of22-0089v3.txt
5.MATLAB/: acrobot_perturbation_oscillations.mlx  collect_arduino_data.mlx  diff_q.m  energy_expansion.m  expansion_vnhc.m  hamiltonian_vhc.m  lyapunov_expansion.m  qupu_eom.mlx  safeNHDynamics.m  simple_acrobot_model.m  solve_for.m  sym2fun.m  vlp_net_energy_gain_control.m  xingbo_nhvc_orbits.fig
5.MATLAB/images/energy_expansion/: E_nh on Omega_NH.fig
5.MATLAB/thesis_sims/: regulationEvent.m  vlp_l_smooth.m  vlp_sims.mlx
6.SUGAR_BOT/3d_models/: bracket_attach.123dx  encoder_holder.123dx  leg_v4.123dx  switchbox.123dx  switchbox.stl  torso_v1.123dx  torso_v2.123dx  torso_v3.123dx
6.SUGAR_BOT/arduino/RX24F_change_BD/: RX24F_change_BD.ino
6.SUGAR_BOT/arduino/SUGAR_bot/: SUGAR_bot.h  SUGAR_bot.ino
6.SUGAR_BOT/arduino/SUGAR_bot_VNHC/: SUGAR_bot_VNHC.ino
6.SUGAR_BOT/arduino/libraries/RX24F/: RX24F.cpp
6.SUGAR_BOT/arduino/libraries/SUGAR_VNHC_Library/: .gitignore  README.md  SUGAR_VNHC.h
6.SUGAR_BOT/arduino/libraries/SUGAR_VNHC_Library/scripts/: run_cmake_config.sh
6.SUGAR_BOT/matlab_files/: visualize.m
6.SUGAR_BOT/technical_documents/RX_28_FR07_STP/FR07_STP/: fr07_b101.stp  fr07_f101.stp  fr07_x101.stp
6.SUGAR_BOT/technical_documents/STEP_RX-24F-28/RX-24F-28/: rx28T.stp
latex/: .fonts.conf  abstract.tex  acknowledgements.tex  acrobot.tex  appendix_I_bounds.tex  bib.bib  conclusion.tex  dedication.tex  introduction.tex  kronprod.tex  main.tex  notation.tex  reinstyle.sty  symbols.tex  title.tex  vhcs.tex  vlp.tex  vnhcs.tex
latex/bcc/: bib.bib  maggiore_moranmacdonald.txt  main.tex
latex/images/: acrobot_I_zero.tex  acrobot_ecm.tex  acrobot_little_omega.tex  acrobot_model.tex  acrobot_oscillation_domain.tex  acrobot_rhobar_regions.tex  acrobot_vlp_symmetry.tex  mu_intersection.tex  pendulum_level_sets.tex  simple_acrobot_model.tex  vlp_T_controller.tex  vlp_energy_in_out.tex  vlp_model.tex  vlp_optimal_controller.tex  vlp_optimal_controller_qp_plane.tex  vlp_smoothed_controller.tex
latex/images/sty/: adantikz.sty
latex/nserc/: bib.bib  contributions.tex  introduction.tex  main.tex  proposal.tex
latex/ogs/: bib.bib  main.tex
latex/paper/: acrobot_EOsc.tex  acrobot_ER1R2.tex  acrobot_EleqR.tex  bib.bib  ieeecolor.cls  main.tex
latex/sty/: adanstyle.sty  adantikz.sty
matlab/: acrobot_controller_tests.m  acrobot_perturbation_oscillations.mlx  acrobot_perturbation_rotations.mlx  acrobot_polar_display.mlx  collect_arduino_data.mlx  make_real.m  pZeroEvents.m  pw2fun.m  radius_perturbation.mlx  variable_length_pendulum.m  xingbo_nhvc.m  xingbo_nvhc_v2.m
matlab/images/energy_expansion/: E_h on Omega_NH.fig  E_nh minus E_h on Omega_NH.fig  Level sets of E_nh E_h and VNHC orbits.fig
matlab/thesis_sims/: acrobot_sims.mlx  energyDissEvent.m  energyInEvent.m  regulationEvent.m  vlp_l_T.m  vlp_l_optimal.m  vlp_l_optimal_gain.m  vlp_sims.mlx
sugar_bot/3d_models/: encoder_holder.stl  leg.123dx  leg_v2.123dx  leg_v3.123dx  leg_v4_trunk.stl  switchbox_fixed.stl  torso_cap.stl
sugar_bot/arduino/SUGAR_bot/: SUGAR_bot.h  SUGAR_bot.ino
sugar_bot/arduino/SUGAR_bot_VNHC/: SUGAR_bot_VNHC.ino
sugar_bot/arduino/SUGAR_box/: SUGAR_box.ino
sugar_bot/arduino/libraries/RX24F/: RX24F.h
sugar_bot/arduino/libraries/SUGAR_VNHC_Library/: AcrobotDynamics.cpp  Phase.cpp  SUGAR_VNHC.h  VNHC.cpp
sugar_bot/arduino/libraries/SUGAR_VNHC_Library/include/: AcrobotDynamics.h  Phase.h  StateSpace.h  Supervisor.h  VNHC.h
sugar_bot/arduino/libraries/SUGAR_VNHC_Library/src/: AcrobotDynamics.cpp  CMakeLists.txt  Phase.cpp  Supervisor.cpp  VNHC.cpp
sugar_bot/arduino/libraries/SUGAR_VNHC_Library/src/test/: AcrobotDynamicsTest.cpp  CMakeLists.txt  PhaseTest.cpp  SupervisorTest.cpp  VNHCTest.cpp
sugar_bot/arduino/libraries/phaselib/: CMakeLists.txt  README.md
sugar_bot/arduino/libraries/phaselib/include/: AcrobotDynamics.h  Phase.h  StateSpace.h  VNHC.h
sugar_bot/arduino/libraries/phaselib/src/: AcrobotDynamics.cpp  CMakeLists.txt  Phase.cpp  VNHC.cpp
sugar_bot/arduino/libraries/phaselib/src/test/: AcrobotDynamicsTest.cpp  AcrobotInverseInertiaTest.cpp  CMakeLists.txt  PhaseSpaceTest.cpp  PhaseTest.cpp  VNHCTest.cpp
sugar_bot/matlab_files/: collect_data.m
sugar_bot/technical_documents/RX_28_FR07_STP/FR07_STP/: fr07_h101.stp
sugar_bot/technical_documents/STEP_RX-24F-28/RX-24F-28/: rx28H.stp  rx28N.stp
(+2 files in other folders)
